# hal_nxp

./: .gitignore  CMakeLists.txt
mcux/: CMakeLists.txt  README  (+1 more)
mcux/mcux-sdk/components/els_pkc/: .gitignore  CMakeLists.txt  TSR_niobe4aSdk.xlsx  TSR_nirvanaSdk.xlsx  TSR_redfinchSdk_sample.xlsx  add_els_pkc_v2.yml  add_els_pkc_v3.yml  clns-niobe4aSdk.contents.txt  clns-nirvanaSdk.contents.txt  clns-redfinchSdk.contents.txt  component_els_pkc_ecc.cmake  component_els_pkc_els.cmake  component_els_pkc_mac.cmake  component_els_pkc_math.cmake  component_els_pkc_memory.cmake  component_els_pkc_param_integrity.cmake  component_els_pkc_pkc.cmake  component_els_pkc_platform_rw61x.cmake  component_els_pkc_platform_rw61x_interface_files.cmake  component_els_pkc_platform_rw61x_standalone_clib_gdet_sensor.cmake  component_els_pkc_prng.cmake  component_els_pkc_random_modes.cmake  component_els_pkc_standalone_gdet.cmake
mcux/mcux-sdk/components/els_pkc/doc/mimxrt_release/html/: a00002.html  a00005.html  a00008.html  a00011.html  a00014.html  a00017.html  a00020.html  a00023.html  a00026.html  a00029.html  a00032.html  a00035.html  a00038.html  a00044.html  a00047.html  a00050.html  a00083.html  a00086.html  a00089.html  a00092.html  a00095.html  a00098.html  a00101.html  a00104.html  a00107.html  a00110.html  a00113.html  a00116.html  a00155.html  a00158.html  a00161.html  a00164.html  a00167.html  a00170.html  a00173.html  a00176.html  a00179.html  a00182.html  a00185.html  a00188.html  (+672 more)
mcux/mcux-sdk/components/els_pkc/doc/rt700Sdk_cosim_release/html/: a00002.html  a00005.html  a00008.html  a00011.html  a00014.html  a00017.html  a00020.html  a00023.html  a00026.html  a00029.html  a00032.html  a00035.html  a00038.html  a00044.html  a00047.html  a00050.html  a00083.html  a00086.html  a00089.html  a00092.html  a00095.html  a00098.html  a00101.html  a00104.html  a00107.html  a00110.html  a00113.html  a00116.html  a00155.html  a00158.html  a00161.html  a00164.html  a00167.html  a00170.html  a00173.html  a00176.html  a00179.html  a00182.html  a00185.html  a00188.html  (+710 more)
mcux/mcux-sdk/components/els_pkc/example/: els_pkc_examples_v2.yml  els_pkc_examples_v3.yml
mcux/mcux-sdk/components/els_pkc/example/els_hash/: els_hash.c
mcux/mcux-sdk/components/els_pkc/example/els_pkc_asymmetric/: els_pkc_asymmetric.c
mcux/mcux-sdk/components/els_pkc/example/els_pkc_benchmark/: els_pkc_benchmark.readme
mcux/mcux-sdk/components/els_pkc/example/els_pkc_benchmark/inc/: els_pkc_benchmark_utils.h  els_pkc_bm_asymmetric.h  els_pkc_bm_hash.h  els_pkc_bm_mac.h  els_pkc_bm_symmetric.h
mcux/mcux-sdk/components/els_pkc/example/els_pkc_benchmark/src/: els_pkc_benchmark.c  els_pkc_benchmark_utils.c  els_pkc_bm_asymmetric.c  els_pkc_bm_hash.c  els_pkc_bm_mac.c  els_pkc_bm_symmetric.c
mcux/mcux-sdk/components/els_pkc/example/els_pkc_common/: els_pkc_common.c
mcux/mcux-sdk/components/els_pkc/example/els_symmetric/: els_symmetric.c  els_symmetric.readme
mcux/mcux-sdk/components/els_pkc/examples/: CMakeLists.txt
mcux/mcux-sdk/components/els_pkc/examples/mcuxClEls/: mcuxClEls_Hash_HW_Security_Counter_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaAeadModes/: mcuxClOsccaAeadModes_CCM_Crypt_Multipart_example.c  mcuxClOsccaAeadModes_CCM_Crypt_Oneshot_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaCipherModes/: mcuxClOsccaCipherModes_Sm4_Crypt_multipart_example.c  mcuxClOsccaCipherModes_Sm4_Crypt_oneshot_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaMacModes/: mcuxClOsccaMacModes_CBCMAC_Multipart_example.c  mcuxClOsccaMacModes_CBCMAC_Oneshot_example.c  mcuxClOsccaMacModes_CMAC_Multipart_example.c  mcuxClOsccaMacModes_CMAC_Oneshot_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaRandomModes/: mcuxClOsccaRandomModes_OsccaTrng_example.c  mcuxClOsccaRandomModes_PatchMode_OsccaRng_example.c  mcuxClOsccaRandomModes_TrngMode_OsccaRng_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaSafo/: mcuxClOsccaSafo_Cover_Public_apis_example.c  mcuxClOsccaSafo_sm3_automode_example.c  mcuxClOsccaSafo_sm4_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaSm2/: mcuxClOsccaSm2_Cipher_Crypt_multipart_example.c  mcuxClOsccaSm2_Cipher_Crypt_oneshot_example.c  mcuxClOsccaSm2_GenerateKeyPair_Signature_example.c  mcuxClOsccaSm2_Keyagreement_SelfTest_example.c  mcuxClOsccaSm2_Keyagreement_example.c  mcuxClOsccaSm2_Signature_SignVerify_FullFlow_example.c  mcuxClOsccaSm2_Signature_SignVerify_SelfTest_example.c  mcuxClOsccaSm2_Signature_SignVerify_WithExtKey_example.c
mcux/mcux-sdk/components/els_pkc/examples/mcuxClOsccaSm3/: mcuxClOsccaSm3_oneshot_example.c  mcuxClOsccaSm3_streaming_example.c
mcux/mcux-sdk/components/els_pkc/includes/: crypto_driver_contexts_composites.h  crypto_driver_contexts_primitives.h  mcuxClEcc_MemoryConsumption.h  mcuxClExample_ELS_Key_Helper.h  mcuxClPsaDriver.h  mcuxClRandomModes_MemoryConsumption.h
mcux/mcux-sdk/components/els_pkc/includes/platform/lpc/: ip_platform.h  mcuxClConfig.h  platform_specific_headers.h
mcux/mcux-sdk/components/els_pkc/includes/platform/mcxn/: ip_platform.h  mcuxClConfig.h  platform_specific_headers.h
mcux/mcux-sdk/components/els_pkc/includes/platform/rw61x/: fsl_device_registers.h  platform_specific_headers.h
mcux/mcux-sdk/components/els_pkc/src/: CMakeLists.txt
mcux/mcux-sdk/components/els_pkc/src/src/: mcuxCl_clns.c
mcux/mcux-sdk/components/els_pkc/static_library/lpc/: libclns.a.libsize  libclns.a.objsize
mcux/mcux-sdk/components/psa_crypto_driver/: CMakeLists.txt  add_psa_crypto_driver_v2.yml  mbedtls_accelerator_config.h  mcux_mbedtls_config.h
mcux/mcux-sdk/components/psa_crypto_driver/els_pkc/: els_pkc_crypto_composites.h  els_pkc_driver.h
mcux/mcux-sdk/components/psa_crypto_driver/els_pkc/include/common/: mcux_psa_els_pkc_common_init.h
mcux/mcux-sdk/components/psa_crypto_driver/osal/: CMakeLists.txt  osal_mutex.h
mcux/mcux-sdk/components/psa_crypto_driver/osal/frtos/: osal_mutex.c
mcux/mcux-sdk/components/psa_crypto_driver/psa_crypto_client/: psa_crypto_client.c
(+573 files in other folders)
